tests/errors/comprehensive/E6008_module_member_readonly.ez
/*
 * Error Test: E6008 - module-member-readonly
 * Expected: "cannot assign to module member"
 */

import @math

do main() {
    math.PI = 3.0  // Trying to modify stdlib constant
}
